# plsconvert

./: README.md  pyproject.toml
src/plsconvert/: cli.py  graph_analysis.py  graph_representation.py
src/plsconvert/converters/: __init__.py  abstract.py  ai.py  audio.py  braille.py  compression.py  configs.py  media.py  registry.py  threed.py  universal.py
src/plsconvert/converters/addons/: audio.py  configs.py  docs.py
src/plsconvert/utils/: dependency.py  graph.py
