[project]
name = "plsconvert"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ThorTuwy", email = "tuwy@tuwy.win" }
]
requires-python = ">=3.13"
dependencies = [
    "halo>=0.0.31",
    "img2pdf>=0.6.1",
    "matplotlib>=3.10.3",
    "pdf2docx>=0.5.8",
    "pillow>=11.3.0",
    "pydub>=0.25.1",
    "scipy>=1.16.0",
]

[project.scripts]
plsconvert = "plsconvert:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
